--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
                         />
                     </div>
                     <div data-aos="fade-down">
-                        <a class="headerButton" href="#">Agendar Hoário</a>
+                        <a class="headerButton" href="./agendaBackEnd/index.html" target="_top">Agendar Hoário</a>
                     </div>
             </nav>
 
             <main class="hero container" data-aos="fade-up" data-aos-delay="400">
                 <h1>ESTILO É UM REFLEXO DA SUA ATITUDE E SUA PERSONALIDADE</h1>
                 <p>Hoário de funcionamento: 09:00 ás 19:00</p>
-                <a href="#" class="buttonContact" target="_blank">
+                <a href="./agendaBackEnd/index.html" class="buttonContact" target="_blank">
                     Agendar Horário
                 </a>
             </main>
@@ -124,7 +124,7 @@
         <iframe 
         width="100%"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d326.63540036323775!2d-51.446545220370545!3d-22.146642876796857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9493f39bdb96413b%3A0x366f8d6e46ab6426!2sR.%20Luiz%20Olivetti%2C%201178%20-%20Jardim%20Prudentino%2C%20Pres.%20Prudente%20-%20SP%2C%2019064-735!5e0!3m2!1spt-BR!2sbr!4v1720988154449!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+        
         <footer class="footer">
             <div class="footerIcons">
                 <a href="#">
