--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Barbearia</title>
+    <title>NV Topografia © </title>
     <link rel="stylesheet" href="style.css">
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
