cores degrade top

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         data-aos="zoom-out-left" data-aos-delay="250"
         >
                 <h2>Sobre</h2>
-                <p>Empresa de topografia e georreferenciamento foi fundada em 2017 com a missão de fornecer serviços de alta qualidade relacionados à medição e mapeamento de terrenos. Nosso objetivo é ajudar nossos clientes a obter informações precisas e confiáveis sobre as medidas do seu imóvel.</p>
+                <p>Empresa NV topografia e georreferenciamento foi fundada em 2017 com a missão de fornecer serviços de alta qualidade relacionados à medição e mapeamento de terrenos. Nosso objetivo é ajudar nossos clientes a obter informações precisas e confiáveis sobre as medidas do seu imóvel.</p>
 
                     <p>Ao longo dos anos, nos especializamos em diversas áreas, como levantamentos topográficos, georreferenciamento de imóveis rurais e urbanos, projetos de engenharia e monitoramento de obras. Nossa equipe é composta por profissionais altamente qualificados e experientes, que utilizam tecnologia de ponta para realizar os serviços com precisão e eficiência.</p>
                     
@@ -148,6 +148,30 @@
                     </div>
                 </dvi>
             </section>
+        </section>
+        <section class="depoimentosAreaGeral">
+            <div class="depoimentoArea">
+                <div class="depoimentoFoto">
+                    <img src="./assets/depoimentoFoto.png" alt="Foto de quem comentou">
+                </div>
+                    <div class="depoimentoTexto">
+                         <p>"Da contratação até a execução uma empresa muito responsavél e profissional..."
+                         </p>
+                    <h5>Italo José - Taubaté - SP</h5>
+                </div>
+             </div>
+
+             <div class="depoimentoArea">
+                <div class="depoimentoFoto">
+                    <img src="./assets/premierAtivo 3depoimentoFoto2.png" alt="Foto de quem comentou">
+                </div>
+                    <div class="depoimentoTexto">
+                         <p>"Muito, agradeço muito por todo profissiolismo e seriedade"
+                         </p>
+                    <h5>Carmen Sandoval P. Lima - Lavras - MG</h5>
+                </div>
+             </div>
+
         </section>
 
         <div class="services">
