--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NV Topografia © </title>
+    <link rel="icon" href="./assets/icon.svg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
