--- a/index.html
+++ b/index.html
@@ -105,6 +105,21 @@
                     <p>Especializados em georreferenciamento, realizamos a demarcação precisa de imóveis rurais, atendendo aos requisitos legais estabelecidos.</P>
 
                 <h3>Locação e acompanhamento de obras:</h3>
+                <p>Oferecemos serviços de locação e acompanhamento topográfico de obras, garantindo a correta execução dos projetos com base em medidas precisas e confiáveis.</p>
+
+                <h1>EMPRESAS PARCEIRAS</h1>
+                <div class="parceriaArea">
+                <div class="gridAreaParceiras">
+                    <img src="./assets/grilo.png">
+                    <img src="./assets/grilo.png">
+                </div>
+                <div class="gridAreaParceiras">
+                    <img src="./assets/grilo.png">
+                    <img src="./assets/grilo.png">
+                </div>
+            </div>
+
+            
                 <br>
                 <hr>
                 <br>
@@ -167,7 +182,7 @@
                     <img src="./assets/premierAtivo 3depoimentoFoto2.png" alt="Foto de quem comentou">
                 </div>
                     <div class="depoimentoTexto">
-                         <p>"Muito, agradeço muito por todo profissiolismo e seriedade"
+                         <p>"Muito , agradeço muito por todo profissiolismo e seriedade"
                          </p>
                     <h5>Carmen Sandoval P. Lima - Lavras - MG</h5>
                 </div>
