--- a/index.html
+++ b/index.html
@@ -88,21 +88,26 @@
     </section>
         <section class="services">
             <div class="servicesContent container">
-                <h2>Serviços</h2>
+                <h2>Serviços Prestados</h2>
                 <h3>USUCAPIÃO:</h3>
                     <p>Realizamos levantamentos topográficos precisos e confiáveis para auxiliar no processo de usucapião, garantindo a regularização legal do imóvel.
                     </p>
+                    <img src="./assets/MONTAGENS/USO.png">
                 <H3>Retificação:</H3>
                     <P>Oferecemos serviços de levantamento topográfico para retificação de áreas, assegurando a correção de possíveis divergências em documentos cadastrais.</P>
+                    <img src="./assets/MONTAGENS/RET.png">
 
                 <h3>Desmembramento:</h3>
                     <p>Realizamos levantamentos precisos para o desmembramento de terrenos, garantindo a correta divisão e documentação dos novos lotes.</p>
 
                 <h3>Unificação:</h3>
                     <p>Executamos levantamentos topográficos para unificação de áreas, proporcionando a integração adequada de terrenos conforme a legislação vigente.</P>
+                        <img src="./assets/MONTAGENS/uni.png">
 
+                
                 <h3>Georreferenciamento de imóveis rurais:</h3>
                     <p>Especializados em georreferenciamento, realizamos a demarcação precisa de imóveis rurais, atendendo aos requisitos legais estabelecidos.</P>
+                        <img src="./assets/MONTAGENS/geo.png">
 
                 <h3>Locação e acompanhamento de obras:</h3>
                 <p>Oferecemos serviços de locação e acompanhamento topográfico de obras, garantindo a correta execução dos projetos com base em medidas precisas e confiáveis.</p>
@@ -119,7 +124,7 @@
                 </div>
             </div>
 
-            
+
                 <br>
                 <hr>
                 <br>
@@ -139,6 +144,10 @@
                     <div class="hairCutInfo">
                         <strong>usucapião</strong>
                         <button>DETALHES</button>
+                        <h2>Serviços Prestados</h2>
+                <h3>USUCAPIÃO:</h3>
+                    <p>Realizamos levantamentos topográficos precisos e confiáveis para auxiliar no processo de usucapião, garantindo a regularização legal do imóvel.
+                    </p>
                     </div>
                 </div>
                 <div class="hairCut" data-aos="fade-up" data-aos-delay="250">
