start new branch devfernando

--- a/index.html
+++ b/index.html
@@ -145,9 +145,7 @@
                         <strong>usucapião</strong>
                         <button>DETALHES</button>
                         <h2>Serviços Prestados</h2>
-                <h3>USUCAPIÃO:</h3>
-                    <p>Realizamos levantamentos topográficos precisos e confiáveis para auxiliar no processo de usucapião, garantindo a regularização legal do imóvel.
-                    </p>
+                
                     </div>
                 </div>
                 <div class="hairCut" data-aos="fade-up" data-aos-delay="250">
@@ -177,7 +175,7 @@
         <section class="depoimentosAreaGeral">
             <div class="depoimentoArea">
                 <div class="depoimentoFoto">
-                    
+                    <img src="./assets/depoimentoFoto.png" alt="Foto de quem comentou">
                 </div>
                     <div class="depoimentoTexto">
                          <p>"Da contratação até a execução uma empresa muito responsavél e profissional..."
