--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 
                 <h3>Desmembramento:</h3>
                     <p>Realizamos levantamentos precisos para o desmembramento de terrenos, garantindo a correta divisão e documentação dos novos lotes.</p>
+                    <img src="./assets/MONTAGENS/desm.png">
 
                 <h3>Unificação:</h3>
                     <p>Executamos levantamentos topográficos para unificação de áreas, proporcionando a integração adequada de terrenos conforme a legislação vigente.</P>
@@ -111,6 +112,7 @@
 
                 <h3>Locação e acompanhamento de obras:</h3>
                 <p>Oferecemos serviços de locação e acompanhamento topográfico de obras, garantindo a correta execução dos projetos com base em medidas precisas e confiáveis.</p>
+                <img src="./assets/MONTAGENS/loc.png">
 
                 <h1>EMPRESAS PARCEIRAS</h1>
                 <div class="parceriaArea">
